fix: :bug: 修复日历挂件新建日记重复问题

--- a/theme/one-dark/dark.css
+++ b/theme/one-dark/dark.css
@@ -1,1 +1,188 @@
-:root{--blue-1:27, 47, 81;--blue-2:23, 52, 99;--blue-3:20, 57, 117;--blue-4:16, 61, 136;--blue-5:13, 66, 154;--blue-6:5, 75, 190;--blue-7:38, 103, 212;--blue-8:69, 130, 230;--blue-9:105, 158, 245;--blue-10:150, 187, 248;--orange-1:79, 42, 29;--orange-2:88, 47, 33;--orange-3:115, 60, 35;--orange-4:167, 93, 43;--orange-5:207, 110, 45;--orange-6:220, 118, 51;--orange-7:232, 147, 92;--orange-8:236, 191, 145;--orange-9:238, 215, 191;--orange-10:243, 233, 220;--red-1:71, 35, 36;--red-2:94, 42, 45;--red-3:112, 52, 57;--red-4:131, 56, 62;--red-5:160, 63, 70;--red-6:198, 71, 81;--red-7:222, 102, 112;--red-8:236, 136, 142;--red-9:237, 177, 182;--red-10:238, 206, 208;--green-1:25, 58, 42;--green-2:26, 66, 48;--green-3:23, 83, 61;--green-4:13, 122, 85;--green-5:5, 148, 101;--green-6:67, 175, 138;--green-7:70, 191, 150;--green-8:128, 210, 182;--green-9:180, 225, 211;--green-10:222, 237, 232;--cyan-1:1, 64, 155;--cyan-2:1, 82, 179;--cyan-3:2, 100, 202;--cyan-4:3, 120, 223;--cyan-5:5, 148, 250;--cyan-6:41, 164, 251;--cyan-7:5, 148, 250;--cyan-8:41, 164, 251;--cyan-9:88, 184, 252;--cyan-10:215, 238, 254;--purple-1:76, 19, 151;--purple-2:99, 37, 176;--purple-3:120, 58, 195;--purple-4:131, 78, 194;--purple-5:154, 111, 206;--purple-6:171, 135, 213;--purple-7:171, 135, 213;--purple-8:171, 135, 213;--purple-9:204, 182, 230;--purple-10:238, 230, 247;--yellow-1:96, 49, 0;--yellow-2:118, 65, 1;--yellow-3:140, 82, 1;--yellow-4:161, 101, 2;--yellow-5:182, 120, 3;--yellow-6:202, 141, 3;--yellow-7:118, 65, 1;--yellow-8:202, 141, 3;--yellow-9:161, 101, 2;--yellow-10:253, 233, 171;--pink-1:91, 55, 79;--pink-2:155, 6, 109;--pink-3:188, 8, 138;--pink-4:212, 53, 160;--pink-5:237, 83, 183;--pink-6:255, 112, 207;--pink-7:255, 153, 228;--pink-8:255, 112, 207;--pink-9:255, 219, 253;--pink-10:255, 242, 255;--gray-1:24, 24, 24;--gray-2:36, 36, 36;--gray-3:44, 44, 44;--gray-4:56, 56, 56;--gray-5:75, 75, 75;--gray-6:94, 94, 94;--gray-7:119, 119, 119;--gray-8:139, 139, 139;--gray-9:166, 166, 166;--gray-10:197, 197, 197;--gray-11:220, 220, 220;--gray-12:231, 231, 231;--gray-13:238, 238, 238;--gray-14:243, 243, 243;--brand-1:var(--blue-1);--brand-2:var(--blue-2);--brand-3:var(--blue-3);--brand-4:var(--blue-4);--brand-5:var(--blue-5);--brand-6:var(--blue-6);--brand-7:var(--blue-7);--brand-8:var(--blue-8);--brand-9:var(--blue-9);--brand-10:var(--blue-10);--text-primary: rgba(215, 218, 224);--text-secondary: rgb(171, 178, 191);--text-placeholder: rgb(107, 113, 125);--text-disabled: rgba(215, 218, 224, 0.4);--text-anti: rgb(248, 250, 253);--text-brand: rgb(97, 175, 239);--text-focus: var(--text-anti);--text-meta-focus: rgba(248, 250, 253, 0.7);--border-1: var(--gray-8);--border-2: var(--gray-6);--border-3: var(--gray-4);--border-4: var(--gray-2);--brand-base: 77, 120, 204;--warning-base: 209, 154, 102;--error-base: 224, 108, 117;--success-base: 115, 201, 145;--info-base: var(--blue-8);--cyan-base: var(--cyan-6);--purple-base: var(--purple-6);--yellow-base: 226, 192, 141;--pink-base: var(--pink-6);--brand-hover: 96, 135, 207;--brand-focus: 96, 135, 207;--brand-active: 115, 150, 210;--brand-disabled: var(--brand-3);--brand-light: var(--brand-2);--warning-hover: var(--orange-4);--warning-focus: var(--orange-2);--warning-active: var(--orange-6);--warning-disabled: var(--orange-3);--warning-light: var(--orange-1);--error-hover: var(--red-5);--error-focus: var(--red-2);--error-active: var(--red-7);--error-disabled: var(--red-3);--error-light: var(--red-1);--success-hover: var(--green-4);--success-focus: var(--green-2);--success-active: var(--green-6);--success-disabled: var(--green-3);--success-light: var(--green-1);--info-hover: var(--blue-7);--info-focus: var(--blue-7);--info-active: var(--blue-9);--info-disabled: var(--blue-3);--info-light: var(--blue-2);--base-1: 30, 34, 39;--base-2: 44, 49, 58;--base-3: 50, 56, 66;--base-4: 56, 63, 74;--page-1: 40, 44, 52;--page-2: 50, 56, 66;--page-3: 60, 68, 90;--page-4: 70, 80, 104;--component-1: 50, 56, 66;--component-2: 60, 68, 90;--component-3: 70, 80, 104;--component-4: 80, 92, 118;--pop-1: 30, 34, 39;--pop-2: 44, 49, 58;--pop-3: 50, 56, 66;--pop-4: 56, 63, 74;--primary-1: var(--brand-base);--primary-2: var(--brand-hover);--primary-3: var(--brand-active);--primary-4: var(--brand-active);--focus-1: var(--brand-base);--focus-2: var(--brand-hover);--focus-3: var(--brand-active);--focus-4: var(--brand-active);--shadow-0: 0 0 0 1px rgb(255 255 255 / 10%);--shadow-1: 0 4px 6px rgba(0, 0, 0, 6%), 0 1px 10px rgba(0, 0, 0, 8%), 0 2px 4px rgba(0, 0, 0, 12%);--shadow-2: 0 8px 10px rgba(0, 0, 0, 12%), 0 3px 14px rgba(0, 0, 0, 10%), 0 5px 5px rgba(0, 0, 0, 16%);--shadow-3: 0 16px 24px rgba(0, 0, 0, 14%), 0 6px 30px rgba(0, 0, 0, 12%), 0 8px 10px rgba(0, 0, 0, 20%);--scroll-base: rgba(255, 255, 255, 10%);--scroll-hover: rgba(255, 255, 255, 10%);--scroll-track: #333;--mask-active: rgba(0, 0, 0, 40%);--mask-disabled: rgba(0, 0, 0, 60%)}
+:root {
+  --blue-1: 27, 47, 81;
+  --blue-2: 23, 52, 99;
+  --blue-3: 20, 57, 117;
+  --blue-4: 16, 61, 136;
+  --blue-5: 13, 66, 154;
+  --blue-6: 5, 75, 190;
+  --blue-7: 38, 103, 212;
+  --blue-8: 69, 130, 230;
+  --blue-9: 105, 158, 245;
+  --blue-10: 150, 187, 248;
+  --orange-1: 79, 42, 29;
+  --orange-2: 88, 47, 33;
+  --orange-3: 115, 60, 35;
+  --orange-4: 167, 93, 43;
+  --orange-5: 207, 110, 45;
+  --orange-6: 220, 118, 51;
+  --orange-7: 232, 147, 92;
+  --orange-8: 236, 191, 145;
+  --orange-9: 238, 215, 191;
+  --orange-10: 243, 233, 220;
+  --red-1: 71, 35, 36;
+  --red-2: 94, 42, 45;
+  --red-3: 112, 52, 57;
+  --red-4: 131, 56, 62;
+  --red-5: 160, 63, 70;
+  --red-6: 198, 71, 81;
+  --red-7: 222, 102, 112;
+  --red-8: 236, 136, 142;
+  --red-9: 237, 177, 182;
+  --red-10: 238, 206, 208;
+  --green-1: 25, 58, 42;
+  --green-2: 26, 66, 48;
+  --green-3: 23, 83, 61;
+  --green-4: 13, 122, 85;
+  --green-5: 5, 148, 101;
+  --green-6: 67, 175, 138;
+  --green-7: 70, 191, 150;
+  --green-8: 128, 210, 182;
+  --green-9: 180, 225, 211;
+  --green-10: 222, 237, 232;
+  --cyan-1: 1, 64, 155;
+  --cyan-2: 1, 82, 179;
+  --cyan-3: 2, 100, 202;
+  --cyan-4: 3, 120, 223;
+  --cyan-5: 5, 148, 250;
+  --cyan-6: 41, 164, 251;
+  --cyan-7: 5, 148, 250;
+  --cyan-8: 41, 164, 251;
+  --cyan-9: 88, 184, 252;
+  --cyan-10: 215, 238, 254;
+  --purple-1: 76, 19, 151;
+  --purple-2: 99, 37, 176;
+  --purple-3: 120, 58, 195;
+  --purple-4: 131, 78, 194;
+  --purple-5: 154, 111, 206;
+  --purple-6: 171, 135, 213;
+  --purple-7: 171, 135, 213;
+  --purple-8: 171, 135, 213;
+  --purple-9: 204, 182, 230;
+  --purple-10: 238, 230, 247;
+  --yellow-1: 96, 49, 0;
+  --yellow-2: 118, 65, 1;
+  --yellow-3: 140, 82, 1;
+  --yellow-4: 161, 101, 2;
+  --yellow-5: 182, 120, 3;
+  --yellow-6: 202, 141, 3;
+  --yellow-7: 118, 65, 1;
+  --yellow-8: 202, 141, 3;
+  --yellow-9: 161, 101, 2;
+  --yellow-10: 253, 233, 171;
+  --pink-1: 91, 55, 79;
+  --pink-2: 155, 6, 109;
+  --pink-3: 188, 8, 138;
+  --pink-4: 212, 53, 160;
+  --pink-5: 237, 83, 183;
+  --pink-6: 255, 112, 207;
+  --pink-7: 255, 153, 228;
+  --pink-8: 255, 112, 207;
+  --pink-9: 255, 219, 253;
+  --pink-10: 255, 242, 255;
+  --gray-1: 24, 24, 24;
+  --gray-2: 36, 36, 36;
+  --gray-3: 44, 44, 44;
+  --gray-4: 56, 56, 56;
+  --gray-5: 75, 75, 75;
+  --gray-6: 94, 94, 94;
+  --gray-7: 119, 119, 119;
+  --gray-8: 139, 139, 139;
+  --gray-9: 166, 166, 166;
+  --gray-10: 197, 197, 197;
+  --gray-11: 220, 220, 220;
+  --gray-12: 231, 231, 231;
+  --gray-13: 238, 238, 238;
+  --gray-14: 243, 243, 243;
+  --brand-1: var(--blue-1);
+  --brand-2: var(--blue-2);
+  --brand-3: var(--blue-3);
+  --brand-4: var(--blue-4);
+  --brand-5: var(--blue-5);
+  --brand-6: var(--blue-6);
+  --brand-7: var(--blue-7);
+  --brand-8: var(--blue-8);
+  --brand-9: var(--blue-9);
+  --brand-10: var(--blue-10);
+  --text-primary: rgba(215, 218, 224);
+  --text-secondary: rgb(171, 178, 191);
+  --text-placeholder: rgb(107, 113, 125);
+  --text-disabled: rgba(215, 218, 224, 0.4);
+  --text-anti: rgb(248, 250, 253);
+  --text-brand: rgb(97, 175, 239);
+  --text-focus: var(--text-anti);
+  --text-meta-focus: rgba(248, 250, 253, 0.7);
+  --border-1: var(--gray-8);
+  --border-2: var(--gray-6);
+  --border-3: var(--gray-4);
+  --border-4: var(--gray-2);
+  --brand-base: 77, 120, 204;
+  --warning-base: 209, 154, 102;
+  --error-base: 224, 108, 117;
+  --success-base: 115, 201, 145;
+  --info-base: var(--blue-8);
+  --cyan-base: var(--cyan-6);
+  --purple-base: var(--purple-6);
+  --yellow-base: 226, 192, 141;
+  --pink-base: var(--pink-6);
+  --brand-hover: 96, 135, 207;
+  --brand-focus: 96, 135, 207;
+  --brand-active: 115, 150, 210;
+  --brand-disabled: var(--brand-3);
+  --brand-light: var(--brand-2);
+  --warning-hover: var(--orange-4);
+  --warning-focus: var(--orange-2);
+  --warning-active: var(--orange-6);
+  --warning-disabled: var(--orange-3);
+  --warning-light: var(--orange-1);
+  --error-hover: var(--red-5);
+  --error-focus: var(--red-2);
+  --error-active: var(--red-7);
+  --error-disabled: var(--red-3);
+  --error-light: var(--red-1);
+  --success-hover: var(--green-4);
+  --success-focus: var(--green-2);
+  --success-active: var(--green-6);
+  --success-disabled: var(--green-3);
+  --success-light: var(--green-1);
+  --info-hover: var(--blue-7);
+  --info-focus: var(--blue-7);
+  --info-active: var(--blue-9);
+  --info-disabled: var(--blue-3);
+  --info-light: var(--blue-2);
+  --base-1: 30, 34, 39;
+  --base-2: 44, 49, 58;
+  --base-3: 50, 56, 66;
+  --base-4: 56, 63, 74;
+  --page-1: 40, 44, 52;
+  --page-2: 50, 56, 66;
+  --page-3: 60, 68, 90;
+  --page-4: 70, 80, 104;
+  --component-1: 50, 56, 66;
+  --component-2: 60, 68, 90;
+  --component-3: 70, 80, 104;
+  --component-4: 80, 92, 118;
+  --pop-1: 30, 34, 39;
+  --pop-2: 44, 49, 58;
+  --pop-3: 50, 56, 66;
+  --pop-4: 56, 63, 74;
+  --primary-1: var(--brand-base);
+  --primary-2: var(--brand-hover);
+  --primary-3: var(--brand-active);
+  --primary-4: var(--brand-active);
+  --focus-1: var(--brand-base);
+  --focus-2: var(--brand-hover);
+  --focus-3: var(--brand-active);
+  --focus-4: var(--brand-active);
+  --shadow-0: 0 0 0 1px rgb(255 255 255 / 10%);
+  --shadow-1: 0 4px 6px rgba(0, 0, 0, 6%), 0 1px 10px rgba(0, 0, 0, 8%),
+    0 2px 4px rgba(0, 0, 0, 12%);
+  --shadow-2: 0 8px 10px rgba(0, 0, 0, 12%), 0 3px 14px rgba(0, 0, 0, 10%),
+    0 5px 5px rgba(0, 0, 0, 16%);
+  --shadow-3: 0 16px 24px rgba(0, 0, 0, 14%), 0 6px 30px rgba(0, 0, 0, 12%),
+    0 8px 10px rgba(0, 0, 0, 20%);
+  --scroll-base: rgba(255, 255, 255, 10%);
+  --scroll-hover: rgba(255, 255, 255, 10%);
+  --scroll-track: #333;
+  --mask-active: rgba(0, 0, 0, 40%);
+  --mask-disabled: rgba(0, 0, 0, 60%);
+}
