--- a/style/component/menu.scss
+++ b/style/component/menu.scss
@@ -101,9 +101,13 @@ $padding: 6px;
 
     // 自定义菜单项（文本框或滑条）
     &--custom {
+      &:has(.b3-switch),
       &:has(.b3-text-field),
       &:has(.b3-slider) {
         @include no-icon();
+      }
+      &:has(.b3-switch) {
+        padding: 0 $fn-space;
       }
     }
 
