--- a/style/protyle/inline/mark.scss
+++ b/style/protyle/inline/mark.scss
@@ -1,7 +1,7 @@
 @use "../../common" as *;
 
 $search-bg: get($color, "yellow", 2);
-$mark: get($bg, "focus", 2);
+$mark: get($color, "cyan", 2);
 
 :root {
   // 编辑器搜索颜色
@@ -16,7 +16,7 @@ $mark: get($bg, "focus", 2);
     background-color: transparent;
     background-image: linear-gradient(
       transparent,
-      transparent 60%,
+      transparent 40%,
       $mark 70%,
       $mark 100%
     );
