fix: :bug: 修复图片浏览界面缩放文字颜色

--- a/style/panel/viewer.scss
+++ b/style/panel/viewer.scss
@@ -1,7 +1,9 @@
-
 @use "../common" as *;
 
 .viewer {
+  &-tooltip {
+    color: get($text, "primary");
+  }
   &-toolbar {
     > ul > li {
       svg {
