fix: :bug: 修复链接图标显示问题
link #84

--- a/plugin/link-icon/main.scss
+++ b/plugin/link-icon/main.scss
@@ -325,7 +325,7 @@ $domains: (
     "pornhub.com": "pornhub.ico",
 
     // 网课
-    "icourse163.org": "mooc.png",
+    "icourse163.org": "mooc.svg",
     "imooc.com": "imooc.svg",
   ),
   "cloud-service": (
