fix: :bug: 优化边窗样式

--- a/style/common/mixins.scss
+++ b/style/common/mixins.scss
@@ -104,7 +104,7 @@
 }
 
 @mixin list-root {
-  background-color: get($bg, "page", 2);
+  // background-color: get($bg, "page", 2);
   // font-weight: 600;
   // border: $fn-border;
   //   &--focus {
