--- a/style/panel/sy-file.scss
+++ b/style/panel/sy-file.scss
@@ -22,6 +22,6 @@
 }
 
 // 文档树笔记本
-[data-type="navigation-root"].b3-list-item {
-  @include list-root();
-}
+// [data-type="navigation-root"].b3-list-item {
+//   @include list-root();
+// }
