--- a/style/panel/graph.scss
+++ b/style/panel/graph.scss
@@ -1,4 +1,3 @@
-
 @use "../common" as *;
 
 .graph {
@@ -37,6 +36,9 @@
 
   &__svg {
     background-color: get($bg, "page", 1);
+    .body--blur & {
+      background-color: get($bg, "page", 1);
+    }
   }
 
   &__loading {
